# VP_Coursework

./: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  Makefile  Makefile.Debug  Makefile.Release  README  README.md  cvfunctions.cpp  cvfunctions.h  definations.h  imageframe.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matcher.h  object_script.vp_hw.Debug  object_script.vp_hw.Release  options.cpp  options.h  options.ui  ui_mainwindow.h  ui_options.h  ui_tabwidget.h  vp_hw.pro  window_QT.cpp  window_QT.h  window_QT.qrc
calib/: calibrationmatrix.txt
debug/userguide_files/: filelist.xml  plchdr.html  props052.xml
images/: Images.avi  jjj.avi  test.m  web_org.avi
images/chessboards/: calibrationmatrix.txt
release/: userguide.html
release/userguide_files/: header.html  item0001.xml  props004.xml
